# control-aws

./: Cargo.toml  README.md
.github/workflows/: build-and-deploy.yaml  docs.yaml
examples/: list.rs  list_accounts.rs
src/: lib.rs  org.rs
tests/: org_test.rs
tests/replays/: list_accounts.json  tags_11111.json  tags_22222.json
