[package]
name = "control-aws"
edition = "2021"
version = "0.1.0"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "Utilities for AWS controllers"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"

# AWS
aws-sdk-organizations = "0.38"
aws-smithy-types = "1.0"
aws-smithy-runtime-api = "1.0"
aws-types = "0.101"
aws-config = { version = "0.101", features = ["behavior-version-latest"] }

# JSON
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
