[package]
name = "control-aws"
edition = "2021"
version = "0.1.0"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "Utilities for AWS controllers"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["rt"] }

# AWS
aws-sdk-organizations = "1.2"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
aws-types = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# JSON
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
